# nitro

./: .gitignore  Anchor.toml  package.json  pnpm-lock.yaml  tsconfig copy.json  tsconfig.all.json  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo
programs/nitro/: Cargo.toml
programs/nitro/src/: errors.rs  instructions.rs  lib.rs  seeds.rs  state.rs  syscalls.rs
programs/nitro/src/instructions/: distribute.rs  finalize.rs  init.rs  join.rs  update.rs
programs/nitro/src/state/: channel.rs  channel_authority.rs
programs/nitro/src/syscalls/: definitions.rs
