[package]
name = "nitro"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nitro"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
bytemuck = "1.9.1"
ed25519-dalek = "1.0.1"
jet-proto-proc-macros = "1"
mpl-token-metadata = "1.8.1"

